crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__literal__effectful_subject.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
case@Int (trace "subject" in 7) of
  7 -> 42
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_1
    (case
      [[(builtin equalsInteger) generated_1] (con integer 7)]
      (error)
      (con integer 42)))
    (force
      [[(force (builtin trace)) (con string "subject")] (delay (con integer 7))])])
--- optimized Core
let anf#1 : int = trace "subject" in 7 in
case@Int anf#1 of
  7 -> 42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_4
    [(lam anf_2
      [(lam generated_3
        (case
          [[(builtin equalsInteger) generated_3] (con integer 7)]
          (error)
          (con integer 42)))
        anf_2])
      (force [[builtin_4 (con string "subject")] (delay (con integer 7))])])
    (force (builtin trace))])
--- isolated pass
--- core before
case@Int (trace "subject" in 7) of
  7 -> 42
--- uplc before
(program 1.1.0
  [(lam generated_1
    (case
      [[(builtin equalsInteger) generated_1] (con integer 7)]
      (error)
      (con integer 42)))
    (force
      [[(force (builtin trace)) (con string "subject")] (delay (con integer 7))])])
--- core after
case@Int (trace "subject" in 7) of
  7 -> 42
--- uplc after
(program 1.1.0
  [(lam generated_1
    (case
      [[(builtin equalsInteger) generated_1] (con integer 7)]
      (error)
      (con integer 42)))
    (force
      [[(force (builtin trace)) (con string "subject")] (delay (con integer 7))])])
--- result
(con integer 42)
--- logs
["subject"]
