crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__literal__empty_empty_bytes_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
case@Bytes (con bytestring #) of
--- unoptimized UPLC
(program 1.1.0 [(lam generated_1 (error)) (con bytestring #)])
--- optimized Core
case@Bytes (con bytestring #) of
--- optimized UPLC
(program 1.1.0 (error))
--- isolated pass
--- core before
case@Bytes (con bytestring #) of
--- uplc before
(program 1.1.0 [(lam generated_1 (error)) (con bytestring #)])
--- core after
case@Bytes (con bytestring #) of
--- uplc after
(program 1.1.0 [(lam generated_1 (error)) (con bytestring #)])
--- result
error: ExplicitErrorTerm
--- logs
[]
