crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__literal__empty_empty_bytes_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
case@Bytes (con bytestring #) of
  _ -> 42
--- unoptimized UPLC
(program 1.1.0 [(lam generated_1 (con integer 42)) (con bytestring #)])
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- isolated pass
--- core before
case@Bytes (con bytestring #) of
  _ -> 42
--- uplc before
(program 1.1.0 [(lam generated_1 (con integer 42)) (con bytestring #)])
--- core after
42
--- uplc after
(program 1.1.0 (con integer 42))
--- result
(con integer 42)
--- logs
[]
