crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__literal__invalid_literal_0.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "format!(\"--- before\\n{}\\n{left:?}\\n--- after\\n{}\\n{right:?}\", pretty(root),\npretty(after))"
---
--- before
case@Int 7 of
  True -> 42
  _ -> 0
InvalidCase("literal test has wrong kind")
--- after
case@Int 7 of
  True -> 42
  _ -> 0
InvalidCase("literal test has wrong kind")
